# learning_axum-rs-

./: README.md
api_conference_2023/: Cargo.toml  README.md  request.http
api_conference_2023/src/: main.rs
axum_fullcourse_by_jeromy_chrone/: Cargo.toml
axum_fullcourse_by_jeromy_chrone/src/: error.rs  main.rs  model.rs
axum_fullcourse_by_jeromy_chrone/src/web/: login_routes.rs  mod.rs
axum_fullcourse_by_jeromy_chrone/tests/: quick_dev.rs
axum_websocket_example/: Cargo.toml
axum_websocket_example/src/: main.rs
backend/: Cargo.toml  README.md
backend/src/: main.rs
building_web_apis_an_intro/: Cargo.toml  README.md  request.http
building_web_apis_an_intro/src/: logic.rs  main.rs
chowhere-users/: .env  Cargo.toml
chowhere-users/src/: main.rs
crud_rest_api_with_cudidotdev/: .env  Cargo.toml  README.md
crud_rest_api_with_cudidotdev/migrations/: 20250316102233_create_tasks_table.sql  20250316172907_add_description_column.sql
crud_rest_api_with_cudidotdev/src/: main.rs
decrusting_axum_crate/: Cargo.toml  README.md
decrusting_axum_crate/src/: main.rs
demo_api/: Cargo.toml  README.md
demo_api/src/: hello.html  main.rs
hello-world/: Cargo.toml  README.md
hello-world/src/: main.rs
intro_with_cudidotdev/: Cargo.toml  README.md
intro_with_cudidotdev/src/: main.rs
introduction-to-axum-brooks-builds/: docker-compose.yml
introduction-to-axum-brooks-builds/hello_world/: Cargo.toml
introduction-to-axum-brooks-builds/hello_world/src/: lib.rs  main.rs
introduction-to-axum-brooks-builds/hello_world/src/routes/: custom_extractor.rs  custom_headers.rs  custom_status_code.rs  custom_success_status_code.rs  get_json_response.rs  hello_world.rs  mirror_body_json.rs  mirror_body_string.rs  mirror_path.rs  mod.rs  query_param.rs  request_headers.rs  set_middleware_custom_headers.rs  submit_data.rs
jwt_auth/: Cargo.toml
jwt_auth/src/: auth_utils.rs  main.rs
mastering_rust_web_services_ardan_labs/: Cargo.toml  README.md
mastering_rust_web_services_ardan_labs/migrations/: 20250407102557_create_books_table.sql
mastering_rust_web_services_ardan_labs/src/: db.rs  main.rs
notes-crud-api/: Cargo.toml  docker-compose.yml
notes-crud-api/src/: handler.rs  main.rs  route.rs  schema.rs
todo-app/: Cargo.toml  README.md  sqlite.db
todo-app/migrations/: 20250323091756_create_todos_table.sql
todo-app/src/: main.rs
