[package]
name = "axum_fullcourse_by_jeromy_chrone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
httpc-test = "0.1.10"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs"] }
