[package]
name = "building_web_apis_an_intro"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
