[package]
name = "chowhere-users"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version="1.44.1", features = ["full"]}
serde = { version="1.0.219", features = ["derive"]}
sqlx = { version = "0.8.3", features = ["macros", "postgres", "runtime-tokio", "tls-native-tls"] }
serde_json = "1.0.140"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
tower-http = { version = "0.3.4", features = ["trace"] }
dotenvy = "0.15.7"
