[package]
name = "crud_rest_api_with_cudidotdev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["macros", "postgres", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.44.1", features = ["full"] }
