[package]
name = "demo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
base64 = "0.22.1"
http = "1.3.1"
hyper = { version = "1.6.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
tower = "0.5.2"
