[package]
name = "mastering_rust_web_services_ardan_labs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.97"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
axum = "0.8.3"
once_cell = "1.21.3"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"]}

[dev-dependencies]
axum-test-helper = "0.3.0"
