[package]
name = "mastering_rust_web_services_ardan_labs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
anyhow = "1.0.97"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
axum = { version = "0.8.3", features = ["macros" ]}
once_cell = "1.21.3"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"]}
axum-macros = "0.5.0" # needed to add debug_handler macro

[dev-dependencies] # only get compiled when running in debug mode
axum-test-helper = "0.4.0"
