[package]
name = "first_axum_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
hyper = "1.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-async-std-native-tls", "uuid"] }
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = { version = "1.15.1", features = ["serde", "v4"] }
