[package]
name = "todo-app"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
log = "0.4.24"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features=["env-filter"] }